# http-load-balancer-from-scratch

./: .env.example  Makefile  a.txt  compose.yaml  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yml
k8s/: deployment.yaml  kustomization.yaml
k8s/http_load_balancer/: deployment.yaml  kustomization.yaml  service-internal.yaml  service.yaml
k8s/http_target_discovery/: deployment.yaml  kustomization.yaml  role.yaml  rolebinding.yaml
k8s/sample_app/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml
kind/: setup.sh
scripts/: hammer_load_balancer.py  test_algorithms.py
src/http_load_balancer_from_scratch/: __main__.py  main.py  settings.py
src/http_load_balancer_from_scratch/algorithms/: __init__.py  base_algorithm.py
src/http_load_balancer_from_scratch/algorithms/dynamic/: __init__.py  least_connections_algorithm.py  least_response_time_algorithm.py
src/http_load_balancer_from_scratch/algorithms/static/: __init__.py  ip_hash_algorithm.py  round_robin_algorithm.py  sticky_round_robin_algorithm.py  weighted_round_robin_algorithm.py
src/http_load_balancer_from_scratch/core/: kubernetes_client.py  kubernetes_manager.py  route_manager.py
src/http_load_balancer_from_scratch/schemas/: __init__.py  connection_schema.py  route_schema.py  target_schema.py  target_stats_schema.py
