[project]
name = "http-load-balancer-base"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/http_load_balancer",
    "packages/sample_app",
]

[tool.uv.sources]
http_load_balancer = { workspace = true }
sample_app = { workspace = true }
